--- a/html/Adds_SP.html
+++ b/html/Adds_SP.html
@@ -14,7 +14,7 @@
         <div class="sp-main">
             <div class="sp-head d-flex align-items-center justify-content-between bg-FCAF1D">
                 <div>
-                    <a href="#" class="">
+                    <a href="home.html" class="">
                         <img src="../assets/images/Picture5.png" alt="" />
                     </a>
                 </div>
@@ -26,15 +26,21 @@
             </div>
             <div class="sp-content bg-2A4DB2">
                 <div class="sp-title d-flex justify-content-between">
-                    <div class="sp-title-item d-flex justify-content-center">
-                        <p>Sản phẩm trên web</p>
-                    </div>
-                    <div class="sp-title-item d-flex justify-content-center">
-                        <p>Thêm từng SP từ HHV</p>
-                    </div>
-                    <div class="sp-title-item d-flex justify-content-center bg-title-item">
-                        <p>Thêm nhiều SP</p>
-                    </div>
+                    <a href="SP_WEB.html">
+                        <div class="sp-title-item d-flex justify-content-center">
+                            <p>Sản phẩm trên web</p>
+                        </div>
+                    </a>
+                    <a href="SP_HHV.html">
+                        <div class="sp-title-item d-flex justify-content-center">
+                            <p>Thêm từng SP từ HHV</p>
+                        </div>
+                    </a>
+                    <a href="Adds_SP.html">
+                        <div class="sp-title-item d-flex justify-content-center bg-title-item">
+                            <p>Thêm nhiều SP</p>
+                        </div>
+                    </a>
                 </div>
 
                 <form>
