--- a/html/home.html
+++ b/html/home.html
@@ -71,54 +71,66 @@
         </div>
         <div class="list-setting d-flex flex-wrap p-0">
             <div class="list-item ">
-                <div class="list-item-img p-3">
-                    <img src="../assets/images/product.png" alt="">
-                </div>
+                <a href="SP_WEB.html">
+                    <div class="list-item-img p-3">
+                        <img src="../assets/images/product.png" alt="">
+                    </div>
+                </a>
                 <div class="d-flex justify-content-center mt-1">
                     <span>Sản phẩm</span>
                 </div>
 
             </div>
             <div class="list-item ">
-                <div class="list-item-img p-3">
-                    <img src="../assets/images/thong-tin.png" alt="">
-                </div>
+                <a href="thong_tin_shop.html">
+                    <div class="list-item-img p-3">
+                        <img src="../assets/images/thong-tin.png" alt="">
+                    </div>
+                </a>
                 <div class="d-flex justify-content-center mt-1">
                     <span>Thông tin</span>
                 </div>
 
             </div>
             <div class="list-item ">
-                <div class="list-item-img p-3">
-                    <img src="../assets/images/gioi-thieu.png" alt="">
-                </div>
+                <a href="shop_intro.html">
+                    <div class="list-item-img p-3">
+                        <img src="../assets/images/gioi-thieu.png" alt="">
+                    </div>
+                </a>
                 <div class="d-flex justify-content-center mt-1">
                     <span>Giới thiệu</span>
                 </div>
 
             </div>
             <div class="list-item ">
-                <div class="list-item-img p-3">
-                    <img src="../assets/images/product.png" alt="">
-                </div>
+                <a href="logo_banner_setting.html">
+                    <div class="list-item-img p-3">
+                        <img src="../assets/images/product.png" alt="">
+                    </div>
+                </a>
                 <div class="d-flex justify-content-center mt-1">
                     <span>logo</span>
                 </div>
 
             </div>
             <div class="list-item ">
-                <div class="list-item-img p-3">
-                    <img src="../assets/images/banner.png" alt="">
-                </div>
+                <a href="logo_banner_setting.html">
+                    <div class="list-item-img p-3">
+                        <img src="../assets/images/banner.png" alt="">
+                    </div>
+                </a>
                 <div class="d-flex justify-content-center mt-1">
                     <span>Banner</span>
                 </div>
 
             </div>
             <div class="list-item ">
-                <div class="list-item-img p-3">
-                    <img src="../assets/images/ngan-hang.png" alt="">
-                </div>
+                <a href="select_industries.html">
+                    <div class="list-item-img p-3">
+                        <img src="../assets/images/ngan-hang.png" alt="">
+                    </div>
+                </a>
                 <div class="d-flex justify-content-center mt-1">
                     <span>Ngành hàng</span>
                 </div>
@@ -159,88 +171,96 @@
                     </div>
                     <div class="list">
                         <div class="tkdl">
-                            <div class=" d-flex justify-content-between tk">
-                                <div class="icon d-flex align-items-center">
-                                    <div class="tkdl-icon">
-                                        <i class="fa-solid fa-cart-shopping"></i>
+                            <a href="order_summary.html">
+                                <div class=" d-flex justify-content-between tk">
+                                    <div class="icon d-flex align-items-center">
+                                        <div class="tkdl-icon">
+                                            <i class="fa-solid fa-cart-shopping"></i>
+                                        </div>
                                     </div>
-                                </div>
-                                <div class="tkdl-content text-center text-white d-flex align-items-center">
-                                    <div>
-                                        <span class="">872</span>
+                                    <div class="tkdl-content text-center text-white d-flex align-items-center">
                                         <div>
-                                            <p>Xem chi tiết</p>
-                                            <p>700.800.000 VND</p>
+                                            <span class="">872</span>
+                                            <div>
+                                                <p>Xem chi tiết</p>
+                                                <p>700.800.000 VND</p>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
-                            </div>
+                            </a>
                             <div class="d-flex justify-content-center">
                                 <span class="tkdl-title">Tổng số đơn hàng</span>
                             </div>
 
                         </div>
                         <div class="tkdl">
-                            <div class=" d-flex justify-content-between tk">
-                                <div class="icon d-flex align-items-center">
-                                    <div class="tkdl-icon">
-                                        <i class="fa-solid fa-cart-shopping"></i>
+                            <a href="order_waiting.html">
+                                <div class=" d-flex justify-content-between tk">
+                                    <div class="icon d-flex align-items-center">
+                                        <div class="tkdl-icon">
+                                            <i class="fa-solid fa-cart-shopping"></i>
+                                        </div>
                                     </div>
-                                </div>
-                                <div class="tkdl-content text-center text-white d-flex align-items-center">
-                                    <div>
-                                        <span class="">872</span>
+                                    <div class="tkdl-content text-center text-white d-flex align-items-center">
                                         <div>
-                                            <p>Xem chi tiết</p>
-                                            <p>700.800.000 VND</p>
+                                            <span class="">872</span>
+                                            <div>
+                                                <p>Xem chi tiết</p>
+                                                <p>700.800.000 VND</p>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
-                            </div>
+                            </a>
                             <div class="d-flex justify-content-center">
                                 <span class="tkdl-title">Đơn hàng chờ xác nhận</span>
                             </div>
 
                         </div>
                         <div class="tkdl">
-                            <div class=" d-flex justify-content-between tk">
-                                <div class="icon d-flex align-items-center">
-                                    <div class="tkdl-icon">
-                                        <i class="fa-solid fa-cart-shopping"></i>
+                            <a href="order_waiting_get_product.html">
+                                <div class=" d-flex justify-content-between tk">
+                                    <div class="icon d-flex align-items-center">
+                                        <div class="tkdl-icon">
+                                            <i class="fa-solid fa-cart-shopping"></i>
+                                        </div>
                                     </div>
-                                </div>
-                                <div class="tkdl-content text-center text-white d-flex align-items-center">
-                                    <div>
-                                        <span class="">872</span>
+                                    <div class="tkdl-content text-center text-white d-flex align-items-center">
                                         <div>
-                                            <p>Xem chi tiết</p>
-                                            <p>700.800.000 VND</p>
+                                            <span class="">872</span>
+                                            <div>
+                                                <p>Xem chi tiết</p>
+                                                <p>700.800.000 VND</p>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
-                            </div>
+                            </a>
                             <div class="d-flex justify-content-center">
                                 <span class="tkdl-title">Đơn hàng chờ lấy hàng</span>
                             </div>
 
                         </div>
                         <div class="tkdl">
-                            <div class=" d-flex justify-content-between tk">
-                                <div class="icon d-flex align-items-center">
-                                    <div class="tkdl-icon">
-                                        <i class="fa-solid fa-cart-shopping"></i>
+                            <a href="order_waiting_delivery.html">
+                                <div class=" d-flex justify-content-between tk">
+                                    <div class="icon d-flex align-items-center">
+                                        <div class="tkdl-icon">
+                                            <i class="fa-solid fa-cart-shopping"></i>
+                                        </div>
                                     </div>
-                                </div>
-                                <div class="tkdl-content text-center text-white d-flex align-items-center">
-                                    <div>
-                                        <span class="">872</span>
+                                    <div class="tkdl-content text-center text-white d-flex align-items-center">
                                         <div>
-                                            <p>Xem chi tiết</p>
-                                            <p>700.800.000 VND</p>
+                                            <span class="">872</span>
+                                            <div>
+                                                <p>Xem chi tiết</p>
+                                                <p>700.800.000 VND</p>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
-                            </div>
+                            </a>
                             <div class="d-flex justify-content-center">
                                 <span class="tkdl-title">Đơn hàng chờ vận chuyển</span>
                             </div>
@@ -309,12 +329,14 @@
                 <div class=" mt-1">
                     <div class="dskh list">
                         <div class="dskh-item">
-                            <div class="dskh-content">
-                                <div class="dskh-item-content text-center">
-                                    <p>1689</p>
-                                    <span>xem chi tiết</span>
+                            <a href="list_visiting_guests.html">
+                                <div class="dskh-content">
+                                    <div class="dskh-item-content text-center">
+                                        <p>1689</p>
+                                        <span>xem chi tiết</span>
+                                    </div>
                                 </div>
-                            </div>
+                            </a>
                             <div class="d-flex justify-content-center">
                                 <span class="dskh-title">Danh sách khách hàng</span>
                             </div>
@@ -402,7 +424,7 @@
             </div>
             <div class="list-menu mt-2">
                 <div class="menu-item">
-                    <a class="d-flex align-items-center">
+                    <a href="thong_tin_shop.html" class="d-flex align-items-center">
                         <div><img src="../assets/images/icon-thongtin.png" alt=""></div>
                         <div class="ms-3">
                             <p>Thông tin shop</p>
@@ -429,7 +451,7 @@
 
                 </div>
                 <div class="menu-item">
-                    <a href="#" class="d-flex align-items-center">
+                    <a href="logo_banner_setting.html" class="d-flex align-items-center">
                         <div><img src="../assets/images/icon-look.png" alt=""></div>
                         <div class="ms-3">
                             <p>Logo</p>
@@ -438,7 +460,7 @@
 
                 </div>
                 <div class="menu-item">
-                    <a href="#" class="d-flex align-items-center">
+                    <a href="logo_banner_setting.html" class="d-flex align-items-center">
                         <div><img src="../assets/images/icon-banner.png" alt=""></div>
                         <div class="ms-3">
                             <p>Banner</p>
@@ -447,7 +469,7 @@
 
                 </div>
                 <div class="menu-item">
-                    <a href="#" class="d-flex align-items-center">
+                    <a href="Adds_SP.html" class="d-flex align-items-center">
                         <div><img src="../assets/images/icon-search.png" alt=""></div>
                         <div class="ms-3">
                             <p>Chọn sản phẩm</p>
@@ -456,7 +478,7 @@
 
                 </div>
                 <div class="menu-item">
-                    <a href="#" class="d-flex align-items-center">
+                    <a href="select_industries.html" class="d-flex align-items-center">
                         <div><img src="../assets/images/icon-ghim.png" alt="" />
 
                         </div>
@@ -477,7 +499,7 @@
 
                 </div>
                 <div class="menu-item">
-                    <a href="#" class="d-flex align-items-center">
+                    <a href="list_products.html" class="d-flex align-items-center">
                         <div><img src="../assets/images/list.png" alt=""></div>
                         <div class="ms-3">
                             <p>Danh sách sản phẩm
@@ -487,10 +509,10 @@
 
                 </div>
                 <div class="menu-item">
-                    <a href="#" class="d-flex align-items-center">
+                    <a href="invite_friends.html" class="d-flex align-items-center">
                         <div><img src="../assets/images/icon-share.png" alt=""></div>
                         <div class="ms-3">
-                            <p>Mời tài sản
+                            <p>Mời bạn bè
                             </p>
                         </div>
                     </a>
