--- a/html/invite_friends.html
+++ b/html/invite_friends.html
@@ -6,17 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mời bạn bè</title>
 
-    <link
-        href="https://fonts.googleapis.com/css2?family=Saira+Condensed:wght@100;200;300;400;500;600;700;800;900&display=swap"
-        rel="stylesheet">
-
     <link href="../css/start.css" rel="stylesheet" />
     <link href="../css/my-styles.css" rel="stylesheet" />
 </head>
 
 <body>
     <div id="root">
-        <div class="container">
+        <div class="container invite-friends">
             <div class="row">
                 <div class="col-12">
                     <div class="row align-items-center header-title">
@@ -28,7 +24,7 @@
                 <div class="col-12 p-0">
                     <img src="/assets/images/invite_friends/banner.png" alt="banner" class="banner">
                 </div>
-                <div class="col-12">
+                <div class="col-12 px-4">
                     <div class="row">
                         <div class="col-12">
                             <p class="label required">Chia sẻ LinK mời Affiliate</p>
@@ -39,7 +35,7 @@
                             </div>
                         </div>
                         <div class="col-12">
-                            <p class="label required">Chia sẻ LinK web tổng đại lý</p>
+                            <p class="label">Chia sẻ LinK web tổng đại lý</p>
                         </div>
                         <div class="col-12">
                             <div class="invite-link web">
@@ -51,7 +47,7 @@
                         </div>
                         <div class="col-12">
                             <div class="invite-link">
-                                <p>ID 8888368</p>
+                                <p style="color: #ffffff87;">ID 8888368</p>
                             </div>
                         </div>
                         <div class="col-6">
@@ -70,12 +66,15 @@
                         </div>
                         <div class="col-12">
                             <p class="label required text-center">Kho ID Affiliate</p>
-                            <img src="/assets/images/invite_friends/id-affiliate.png" alt="id-affiliate"
-                                class="id-affiliate">
+                            <div class="id-affiliate" style="background: #00426d;">
+                                <img src="/assets/images/bgId.gif" alt="" style="width: 70px!important; position: absolute; left: 14%;">
+                                <img src="/assets/images/68.png" alt="68" style="width: 40px!important;">
+                            </div>
                         </div>
                         <div class="col-12">
                             <p class="label required">Lưu ý :</p>
-                            <p class="alert">Khi thành viên Affiliate mới đăng ký buộc phải có mã ID Affiliate của người giới thiệu
+                            <p class="alert">Khi thành viên Affiliate mới đăng ký buộc phải có mã ID Affiliate của người
+                                giới thiệu
                                 hoặc mã QR để cập nhật </p>
                         </div>
                     </div>
