--- a/html/list_visiting_guests.html
+++ b/html/list_visiting_guests.html
@@ -21,166 +21,227 @@
                 <div class="col-12">
                     <div class="row align-items-center header-title red">
                         <div class="col-12 text-center">
-                            <i class="fa-solid fa-angles-left"></i>
+                            <a href="home.html"><img src="../assets/images/Picture5.png" alt="" height="22"
+                                    style="width: 20px !important;" /></a>
                             <h5>DANH SÁCH KHÁCH HÀNG VÃNG LAI</h5>
                         </div>
                     </div>
                 </div>
                 <div class="col-12">
                     <h5 class="list-title">Danh sách khách hàng vãng lai</h5>
-                    <table class="table order_summary">
+                    <table class="table products-table order_summary">
                         <thead>
                             <tr>
-                                <th scope="col"><p>#</p></th>
-                                <th scope="col"><p>Họ và tên</p></th>
-                                <th scope="col"><p>Số điện thoại</p></th>
-                                <th scope="col"><p>Ví</p></th>
-                                <th scope="col" style="width: 70px;"><p>Lịch sử giao dịch</p></th>
-                                <th scope="col" style="width: 70px;"><p>Lịch sử đơn hàng</p></th>
+                                <th scope="col">
+                                    <p>#</p>
+                                </th>
+                                <th scope="col">
+                                    <p>Họ và tên</p>
+                                </th>
+                                <th scope="col">
+                                    <p>Số điện thoại</p>
+                                </th>
+                                <th scope="col">
+                                    <p>Ví</p>
+                                </th>
+                                <th scope="col" style="width: 80px;">
+                                    <p>Lịch sử giao dịch</p>
+                                </th>
+                                <th scope="col" style="width: 80px;">
+                                    <p>Lịch sử đơn hàng</p>
+                                </th>
                             </tr>
                         </thead>
                         <tbody>
                             <tr>
-                                <th scope="row"><p>22</p></th>
+                                <th scope="row">
+                                    <p>22</p>
+                                </th>
                                 <td>
                                     <p>1</p>
                                 </td>
                                 <td>
                                     <p>0387287226</p>
                                 </td>
-                                <td><p>0 VNĐ</p></td>
+                                <td>
+                                    <p>0 VNĐ</p>
+                                </td>
                                 <td><span class="act">Giao dịch</span></td>
                                 <td><span class="act">Đơn hàng</span></td>
                             </tr>
                             <tr>
-                                <th scope="row"><p>22</p></th>
+                                <th scope="row">
+                                    <p>22</p>
+                                </th>
                                 <td>
                                     <p>1</p>
                                 </td>
                                 <td>
                                     <p>0387287226</p>
                                 </td>
-                                <td><p>0 VNĐ</p></td>
+                                <td>
+                                    <p>0 VNĐ</p>
+                                </td>
                                 <td><span class="act">Giao dịch</span></td>
                                 <td><span class="act">Đơn hàng</span></td>
                             </tr>
                             <tr>
-                                <th scope="row"><p>22</p></th>
+                                <th scope="row">
+                                    <p>22</p>
+                                </th>
                                 <td>
                                     <p>1</p>
                                 </td>
                                 <td>
                                     <p>0387287226</p>
                                 </td>
-                                <td><p>0 VNĐ</p></td>
+                                <td>
+                                    <p>0 VNĐ</p>
+                                </td>
                                 <td><span class="act">Giao dịch</span></td>
                                 <td><span class="act">Đơn hàng</span></td>
                             </tr>
                             <tr>
-                                <th scope="row"><p>22</p></th>
+                                <th scope="row">
+                                    <p>22</p>
+                                </th>
                                 <td>
                                     <p>1</p>
                                 </td>
                                 <td>
                                     <p>0387287226</p>
                                 </td>
-                                <td><p>0 VNĐ</p></td>
+                                <td>
+                                    <p>0 VNĐ</p>
+                                </td>
                                 <td><span class="act">Giao dịch</span></td>
                                 <td><span class="act">Đơn hàng</span></td>
                             </tr>
                             <tr>
-                                <th scope="row"><p>22</p></th>
+                                <th scope="row">
+                                    <p>22</p>
+                                </th>
                                 <td>
                                     <p>1</p>
                                 </td>
                                 <td>
                                     <p>0387287226</p>
                                 </td>
-                                <td><p>0 VNĐ</p></td>
+                                <td>
+                                    <p>0 VNĐ</p>
+                                </td>
                                 <td><span class="act">Giao dịch</span></td>
                                 <td><span class="act">Đơn hàng</span></td>
                             </tr>
                             <tr>
-                                <th scope="row"><p>22</p></th>
+                                <th scope="row">
+                                    <p>22</p>
+                                </th>
                                 <td>
                                     <p>1</p>
                                 </td>
                                 <td>
                                     <p>0387287226</p>
                                 </td>
-                                <td><p>0 VNĐ</p></td>
+                                <td>
+                                    <p>0 VNĐ</p>
+                                </td>
                                 <td><span class="act">Giao dịch</span></td>
                                 <td><span class="act">Đơn hàng</span></td>
                             </tr>
                             <tr>
-                                <th scope="row"><p>22</p></th>
+                                <th scope="row">
+                                    <p>22</p>
+                                </th>
                                 <td>
                                     <p>1</p>
                                 </td>
                                 <td>
                                     <p>0387287226</p>
                                 </td>
-                                <td><p>0 VNĐ</p></td>
+                                <td>
+                                    <p>0 VNĐ</p>
+                                </td>
                                 <td><span class="act">Giao dịch</span></td>
                                 <td><span class="act">Đơn hàng</span></td>
                             </tr>
                             <tr>
-                                <th scope="row"><p>22</p></th>
+                                <th scope="row">
+                                    <p>22</p>
+                                </th>
                                 <td>
                                     <p>1</p>
                                 </td>
                                 <td>
                                     <p>0387287226</p>
                                 </td>
-                                <td><p>0 VNĐ</p></td>
+                                <td>
+                                    <p>0 VNĐ</p>
+                                </td>
                                 <td><span class="act">Giao dịch</span></td>
                                 <td><span class="act">Đơn hàng</span></td>
                             </tr>
                             <tr>
-                                <th scope="row"><p>22</p></th>
+                                <th scope="row">
+                                    <p>22</p>
+                                </th>
                                 <td>
                                     <p>1</p>
                                 </td>
                                 <td>
                                     <p>0387287226</p>
                                 </td>
-                                <td><p>0 VNĐ</p></td>
+                                <td>
+                                    <p>0 VNĐ</p>
+                                </td>
                                 <td><span class="act">Giao dịch</span></td>
                                 <td><span class="act">Đơn hàng</span></td>
                             </tr>
                             <tr>
-                                <th scope="row"><p>22</p></th>
+                                <th scope="row">
+                                    <p>22</p>
+                                </th>
                                 <td>
                                     <p>1</p>
                                 </td>
                                 <td>
                                     <p>0387287226</p>
                                 </td>
-                                <td><p>0 VNĐ</p></td>
+                                <td>
+                                    <p>0 VNĐ</p>
+                                </td>
                                 <td><span class="act">Giao dịch</span></td>
                                 <td><span class="act">Đơn hàng</span></td>
                             </tr>
                             <tr>
-                                <th scope="row"><p>22</p></th>
+                                <th scope="row">
+                                    <p>22</p>
+                                </th>
                                 <td>
                                     <p>1</p>
                                 </td>
                                 <td>
                                     <p>0387287226</p>
                                 </td>
-                                <td><p>0 VNĐ</p></td>
+                                <td>
+                                    <p>0 VNĐ</p>
+                                </td>
                                 <td><span class="act">Giao dịch</span></td>
                                 <td><span class="act">Đơn hàng</span></td>
                             </tr>
                             <tr>
-                                <th scope="row"><p>22</p></th>
+                                <th scope="row">
+                                    <p>22</p>
+                                </th>
                                 <td>
                                     <p>1</p>
                                 </td>
                                 <td>
                                     <p>0387287226</p>
                                 </td>
-                                <td><p>0 VNĐ</p></td>
+                                <td>
+                                    <p>0 VNĐ</p>
+                                </td>
                                 <td><span class="act">Giao dịch</span></td>
                                 <td><span class="act">Đơn hàng</span></td>
                             </tr>
