--- a/html/order_summary.html
+++ b/html/order_summary.html
@@ -21,13 +21,14 @@
                 <div class="col-12">
                     <div class="row align-items-center header-title">
                         <div class="col-12 text-center">
-                            <i class="fa-solid fa-angles-left"></i>
+                            <a href="home.html"><img src="../assets/images/Picture5.png" alt="" height="22"
+                                    style="width: 20px !important;" /></a>
                             <h5>TỔNG SỐ ĐƠN HÀNG</h5>
                         </div>
                     </div>
                 </div>
                 <div class="col-12">
-                    <table class="table order_summary">
+                    <table class="table products-table order_summary">
                         <thead>
                             <tr>
                                 <th scope="col">
