--- a/html/order_waiting.html
+++ b/html/order_waiting.html
@@ -21,26 +21,41 @@
                 <div class="col-12">
                     <div class="row align-items-center header-title violet">
                         <div class="col-12 text-center">
-                            <i class="fa-solid fa-angles-left"></i>
+                            <a href="home.html"><img src="../assets/images/Picture5.png" alt="" height="22"
+                                    style="width: 20px !important;" /></a>
                             <h5>ĐƠN HÀNG CHỜ XÁC NHẬN</h5>
                         </div>
                     </div>
                 </div>
                 <div class="col-12">
-                    <table class="table order_summary">
+                    <table class="table products-table order_summary">
                         <thead>
                             <tr>
-                                <th scope="col"><p>ID</p></th>
-                                <th scope="col"><p>Mã đơn</p></th>
-                                <th scope="col"><p>Bên nhận</p></th>
-                                <th scope="col"><p>Tổng tiền</p></th>
-                                <th scope="col"><p>Mã vận chuyển</p></th>
-                                <th scope="col"><p>Đơn vị vận chuyển</p></th>
+                                <th scope="col">
+                                    <p>ID</p>
+                                </th>
+                                <th scope="col">
+                                    <p>Mã đơn</p>
+                                </th>
+                                <th scope="col">
+                                    <p>Bên nhận</p>
+                                </th>
+                                <th scope="col">
+                                    <p>Tổng tiền</p>
+                                </th>
+                                <th scope="col">
+                                    <p>Mã vận chuyển</p>
+                                </th>
+                                <th scope="col">
+                                    <p>Đơn vị vận chuyển</p>
+                                </th>
                             </tr>
                         </thead>
                         <tbody>
                             <tr>
-                                <th scope="row"><p>4324</p></th>
+                                <th scope="row">
+                                    <p>4324</p>
+                                </th>
                                 <td>
                                     <div class="order_code">
                                         <p>HHV8244324</p>
@@ -54,12 +69,20 @@
                                     <p>0327367466</p>
                                     <p>Huyện Ba Vì - Hà Nội</p>
                                 </td>
-                                <td><p>1,112,148đ</p></td>
-                                <td><p>Chưa tạo vận đơn</p></td>
-                                <td><p>VIETTEL POST</p></td>
+                                <td>
+                                    <p>1,112,148đ</p>
+                                </td>
+                                <td>
+                                    <p>Chưa tạo vận đơn</p>
+                                </td>
+                                <td>
+                                    <p>VIETTEL POST</p>
+                                </td>
                             </tr>
                             <tr>
-                                <th scope="row"><p>4324</p></th>
+                                <th scope="row">
+                                    <p>4324</p>
+                                </th>
                                 <td>
                                     <div class="order_code">
                                         <p>HHV8244324</p>
@@ -73,12 +96,20 @@
                                     <p>0327367466</p>
                                     <p>Huyện Ba Vì - Hà Nội</p>
                                 </td>
-                                <td><p>1,112,148đ</p></td>
-                                <td><p>Chưa tạo vận đơn</p></td>
-                                <td><p>VIETTEL POST</p></td>
+                                <td>
+                                    <p>1,112,148đ</p>
+                                </td>
+                                <td>
+                                    <p>Chưa tạo vận đơn</p>
+                                </td>
+                                <td>
+                                    <p>VIETTEL POST</p>
+                                </td>
                             </tr>
                             <tr>
-                                <th scope="row"><p>4324</p></th>
+                                <th scope="row">
+                                    <p>4324</p>
+                                </th>
                                 <td>
                                     <div class="order_code">
                                         <p>HHV8244324</p>
@@ -92,12 +123,20 @@
                                     <p>0327367466</p>
                                     <p>Huyện Ba Vì - Hà Nội</p>
                                 </td>
-                                <td><p>1,112,148đ</p></td>
-                                <td><p>Chưa tạo vận đơn</p></td>
-                                <td><p>VIETTEL POST</p></td>
+                                <td>
+                                    <p>1,112,148đ</p>
+                                </td>
+                                <td>
+                                    <p>Chưa tạo vận đơn</p>
+                                </td>
+                                <td>
+                                    <p>VIETTEL POST</p>
+                                </td>
                             </tr>
                             <tr>
-                                <th scope="row"><p>4324</p></th>
+                                <th scope="row">
+                                    <p>4324</p>
+                                </th>
                                 <td>
                                     <div class="order_code">
                                         <p>HHV8244324</p>
@@ -111,12 +150,20 @@
                                     <p>0327367466</p>
                                     <p>Huyện Ba Vì - Hà Nội</p>
                                 </td>
-                                <td><p>1,112,148đ</p></td>
-                                <td><p>Chưa tạo vận đơn</p></td>
-                                <td><p>VIETTEL POST</p></td>
+                                <td>
+                                    <p>1,112,148đ</p>
+                                </td>
+                                <td>
+                                    <p>Chưa tạo vận đơn</p>
+                                </td>
+                                <td>
+                                    <p>VIETTEL POST</p>
+                                </td>
                             </tr>
                             <tr>
-                                <th scope="row"><p>4324</p></th>
+                                <th scope="row">
+                                    <p>4324</p>
+                                </th>
                                 <td>
                                     <div class="order_code">
                                         <p>HHV8244324</p>
@@ -130,12 +177,20 @@
                                     <p>0327367466</p>
                                     <p>Huyện Ba Vì - Hà Nội</p>
                                 </td>
-                                <td><p>1,112,148đ</p></td>
-                                <td><p>Chưa tạo vận đơn</p></td>
-                                <td><p>VIETTEL POST</p></td>
+                                <td>
+                                    <p>1,112,148đ</p>
+                                </td>
+                                <td>
+                                    <p>Chưa tạo vận đơn</p>
+                                </td>
+                                <td>
+                                    <p>VIETTEL POST</p>
+                                </td>
                             </tr>
                             <tr>
-                                <th scope="row"><p>4324</p></th>
+                                <th scope="row">
+                                    <p>4324</p>
+                                </th>
                                 <td>
                                     <div class="order_code">
                                         <p>HHV8244324</p>
@@ -149,12 +204,20 @@
                                     <p>0327367466</p>
                                     <p>Huyện Ba Vì - Hà Nội</p>
                                 </td>
-                                <td><p>1,112,148đ</p></td>
-                                <td><p>Chưa tạo vận đơn</p></td>
-                                <td><p>VIETTEL POST</p></td>
+                                <td>
+                                    <p>1,112,148đ</p>
+                                </td>
+                                <td>
+                                    <p>Chưa tạo vận đơn</p>
+                                </td>
+                                <td>
+                                    <p>VIETTEL POST</p>
+                                </td>
                             </tr>
                             <tr>
-                                <th scope="row"><p>4324</p></th>
+                                <th scope="row">
+                                    <p>4324</p>
+                                </th>
                                 <td>
                                     <div class="order_code">
                                         <p>HHV8244324</p>
@@ -168,12 +231,20 @@
                                     <p>0327367466</p>
                                     <p>Huyện Ba Vì - Hà Nội</p>
                                 </td>
-                                <td><p>1,112,148đ</p></td>
-                                <td><p>Chưa tạo vận đơn</p></td>
-                                <td><p>VIETTEL POST</p></td>
+                                <td>
+                                    <p>1,112,148đ</p>
+                                </td>
+                                <td>
+                                    <p>Chưa tạo vận đơn</p>
+                                </td>
+                                <td>
+                                    <p>VIETTEL POST</p>
+                                </td>
                             </tr>
                             <tr>
-                                <th scope="row"><p>4324</p></th>
+                                <th scope="row">
+                                    <p>4324</p>
+                                </th>
                                 <td>
                                     <div class="order_code">
                                         <p>HHV8244324</p>
@@ -187,12 +258,20 @@
                                     <p>0327367466</p>
                                     <p>Huyện Ba Vì - Hà Nội</p>
                                 </td>
-                                <td><p>1,112,148đ</p></td>
-                                <td><p>Chưa tạo vận đơn</p></td>
-                                <td><p>VIETTEL POST</p></td>
+                                <td>
+                                    <p>1,112,148đ</p>
+                                </td>
+                                <td>
+                                    <p>Chưa tạo vận đơn</p>
+                                </td>
+                                <td>
+                                    <p>VIETTEL POST</p>
+                                </td>
                             </tr>
                             <tr>
-                                <th scope="row"><p>4324</p></th>
+                                <th scope="row">
+                                    <p>4324</p>
+                                </th>
                                 <td>
                                     <div class="order_code">
                                         <p>HHV8244324</p>
@@ -206,9 +285,15 @@
                                     <p>0327367466</p>
                                     <p>Huyện Ba Vì - Hà Nội</p>
                                 </td>
-                                <td><p>1,112,148đ</p></td>
-                                <td><p>Chưa tạo vận đơn</p></td>
-                                <td><p>VIETTEL POST</p></td>
+                                <td>
+                                    <p>1,112,148đ</p>
+                                </td>
+                                <td>
+                                    <p>Chưa tạo vận đơn</p>
+                                </td>
+                                <td>
+                                    <p>VIETTEL POST</p>
+                                </td>
                             </tr>
                         </tbody>
                     </table>
