--- a/html/product_setting.html
+++ b/html/product_setting.html
@@ -6,10 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cài đặt sản phẩm</title>
 
-    <link
-        href="https://fonts.googleapis.com/css2?family=Saira+Condensed:wght@100;200;300;400;500;600;700;800;900&display=swap"
-        rel="stylesheet">
-
     <link href="../css/start.css" rel="stylesheet" />
     <link href="../css/my-styles.css" rel="stylesheet" />
 </head>
@@ -21,7 +17,10 @@
                 <div class="col-12">
                     <div class="row align-items-center header-title">
                         <div class="col-12 text-center">
-                            <i class="fa-solid fa-angles-left"></i>
+                            <a href="home.html"> 
+                                <img src="../assets/images/Picture5.png" alt="" height="22"
+                                    style="width: 20px !important;" />
+                            </a>
                             <h5>CÀI ĐẶT SẢN PHẨM</h5>
                         </div>
                     </div>
@@ -29,10 +28,10 @@
                 <div class="col-12">
                     <div class="row">
                         <div class="col-6">
-                            <div class="add-logo_banner active">Thêm logo</div>
+                            <div class="add-logo_banner">Thêm logo</div>
                         </div>
                         <div class="col-6">
-                            <div class="add-logo_banner">Thêm Banner</div>
+                            <div class="add-logo_banner active">Thêm Banner</div>
                         </div>
                     </div>
                 </div>
