--- a/html/select_industries.html
+++ b/html/select_industries.html
@@ -21,7 +21,8 @@
                 <div class="col-12">
                     <div class="row align-items-center header-title">
                         <div class="col-12 text-center">
-                            <i class="fa-solid fa-angles-left"></i>
+                            <a href="home.html"><img src="../assets/images/Picture5.png" alt="" height="22"
+                                    style="width: 20px !important;" /></a>
                             <h5>CHỌN NGÀNH</h5>
                         </div>
                     </div>
