--- a/html/thong_tin_shop.html
+++ b/html/thong_tin_shop.html
@@ -13,7 +13,7 @@
         <div class="container">
             <div class="shop-info-header">
                 <div class="d-flex justify-content-between pt-4 pb-4">
-                    <a href="#" class="text-white">
+                    <a href="home.html" class="text-white">
                         <span class="d-flex align-items-center">
                             <img src="../assets/images/Picture5.png" alt="">
                         </span>
